Code/ros_ws/log/build_2022-11-22_17-25-25/pump_control/stderr.log
/usr/lib/python3/dist-packages/setuptools/dist.py:723: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/ros_ws/install/pump_control/lib/python3.10/site-packages/pump_control/pump_control_node.py", line 68
    on_interval[] = [time.strptime(on_times_str[i], '%d%H:%M:%S.%f'), time.strptime(off_times_str[i], '%d%H:%M:%S.%f')]
                ^
SyntaxError: invalid syntax

